traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: value unary_! is not a member of Unit
  while (!posFinale()) {
         ^Snake:14: warning: enclosing method posFinale has result type Unit: return value discarded
        return estFaceMur()
        ^Snake:18: warning: enclosing method posFinale has result type Unit: return value discarded
        return estFaceMur()
        ^Snake:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:22: warning: enclosing method posFinale has result type Unit: return value discarded
    return false
    ^